--- a/trunk/Languages/default-heb.xml
+++ b/trunk/Languages/default-heb.xml
@@ -3156,8 +3156,7 @@
 		<control/>
 		<control caption="שורת משימות:"/>
 		<control caption="כשאני לוחץ על סגור:"/>
-		<!--<control caption="סגור לאחר סיום פעולה|מזער לשורת משימות|סגור מיד|שאל אותי"/>-->
-		<control caption="שאל אותי|סגור מיד|מזער לשורת משימות|סגור לאחר סיום פעולה"/>
+		<control caption="סגור לאחר סיום פעולה|מזער לשורת משימות|סגור מיד|שאל אותי"/>
 		<control caption="כשאני לוחץ מזער:"/>
 		<control caption="רגיל|מזער לשורת משימות"/>
 	</dialog>
