Removed Ray-Man from credits (asked personally)

--- a/Languages/default-nl.xml
+++ b/Languages/default-nl.xml
@@ -8,7 +8,7 @@
 	o with umlaut:  &#246;
 	u with umlaut:  &#252;-->
 <!-- Team Dutch translators Shareaza current members are:
-Ceceboyken, Jonne, Joren, Maybeme, Ray-Man -->
+Ceceboyken, Jonne, Joren, Maybeme -->
 <!-- Body element, don't touch -->
 <skin xmlns="http://www.shareaza.com/schemas/Skin.xsd" version="1.0">
 <!-- Manifest -->
